<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="b0">0</string>
    <string name="b1">1</string>
    <string name="b2">2</string>
    <string name="b3">3</string>
    <string name="b4">4</string>
    <string name="b5">5</string>
    <string name="b6">6</string>
    <string name="b7">7</string>
    <string name="b8">8</string>
    <string name="b9">9</string>
    <string name="bplus">+</string>
    <string name="bminus">-</string>
    <string name="binto">*</string>
    <string name="bby">/</string>
    <string name="bdot">.</string>
    <string name="bclear">C</string>
    <string name="bequals">=</string>
    <string name="bpow">^</string>
    <string name="bleftbracket">(</string>
    <string name="brightbracket">)</string>
    <string name="app_name">ScientificCalci</string>
    <string name="bbspace">&lt;-</string>

</resources>