<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/disp_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b7" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b8" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b9" />

            <Button
                android:id="@+id/buttonplus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bplus" />

            <Button
                android:id="@+id/buttonbspace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bbspace" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b4" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b5" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b6" />

            <Button
                android:id="@+id/buttonminus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bminus" />

            <Button
                android:id="@+id/buttonpow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bpow" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b1" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b2" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b3" />

            <Button
                android:id="@+id/buttoninto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/binto" />

            <Button
                android:id="@+id/buttonleftbracket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bleftbracket" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttondot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bdot" />

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b0" />

            <Button
                android:id="@+id/buttonclear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bclear" />

            <Button
                android:id="@+id/buttonby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bby" />

            <Button
                android:id="@+id/buttonrightbracket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brightbracket" />

        </TableRow>

        <Button
            android:id="@+id/buttonequals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bequals" />

    </TableLayout>

</LinearLayout>